更新了扩展版本检查、重新定义了资源路径